--- a/GoingRogueDesign/GoingRogueDesign/Account.storyboard
+++ b/GoingRogueDesign/GoingRogueDesign/Account.storyboard
@@ -358,7 +358,7 @@
         <!--Account-->
         <scene sceneID="dXO-2w-sZR">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sQ9-T8-8jK" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="goAccount" automaticallyAdjustsScrollViewInsets="NO" id="sQ9-T8-8jK" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Account" image="Account Figure" id="yQM-2e-xNc"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
